--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="nav">
 				<img src="image/icon.png" alt="text" class="icon">
 				<p class="scandi">SCANDI</p>
-				<a href="#" class="company">О компании</a>
+				<a href="#company_page" class="company">О компании</a>
 				<a href="#" class="portfolio">Портфолио</a>
 				<a href="#" class="team">Команда</a>
 				<a href="#" class="work">Как мы работаем </a>
@@ -29,6 +29,34 @@
 				<p><button class="application" type="submit">Оставить заявку</button></p>
 		</div>
 	</div>
+
+	<div class="company_page" id="company_page">
+		<h2>О нас</h2>
+		<img class="us_img" src="image/us.png" alt="text">
+		<p class="uss"> Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать неповторимые интерьеры для наших дорогих клиентов, уделяя внимание мельчайшим деталям — вот то,  что по-настоящему вдохновляет дизайнеров нашей студии
+			<br> <br>Наш коллектив сделает все, чтобы после сотрудничества с нами,  Вам было приятно сказать:
+ «Да! Это именно то, что действительно достойно моего дома!»</p>
+	</div>
+
+	<div class="figure">
+		<p class="number-5 fig">5</p>
+		<p class="years fig">лет опыта</p>
+		<p class="number-100 fig">100</p>
+		<p class="proekt fig">проектов</p>
+		<p class="number-10 fig">10</p>
+		<p class="awards fig">наград</p>
+	</div>
+
+	<div class="portfolio_page" id="portfolio_page">
+		<h2>Наши работы</h2>
+		<div class="picture">
+			<img class="first" alt="text" src="image/Rectangle145.png">
+			<img class="second" alt="text" src="image/Rectangle132.png">
+			<img class="third" alt="text" src="image/image56.png">
+			<img class="fourth" alt="text" src="image/Rectangle134.png">
+		</div>
+	</div>
+
 
 </body>
 </html>
