ready comand and work block

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 <body>
 	<div class="container">
-		<img src="image/header.png" alt="text" class="head">
+		<img src="image/header.png" alt="text" class="head" />
 			<div class="nav">
 				<img src="image/icon.png" alt="text" class="icon">
 				<p class="scandi">SCANDI</p>
 				<a href="#company_page" class="company">О компании</a>
-				<a href="#" class="portfolio">Портфолио</a>
-				<a href="#" class="team">Команда</a>
-				<a href="#" class="work">Как мы работаем </a>
+				<a href="#portfolio_page" class="portfolio">Портфолио</a>
+				<a href="#team_page" class="team">Команда</a>
+				<a href="#work_page" class="work">Как мы работаем </a>
 				<a href="#" class="clients">Отзывы клиентов</a>
 				<a href="#" class="app">Оставить заявку</a>
 				<p class="namber">+7 (981) 857-46-24</p>
@@ -49,13 +49,61 @@
 
 	<div class="portfolio_page" id="portfolio_page">
 		<h2>Наши работы</h2>
-		<div class="picture">
+	<div class="picture">
 			<img class="first" alt="text" src="image/Rectangle145.png">
 			<img class="second" alt="text" src="image/Rectangle132.png">
 			<img class="third" alt="text" src="image/image56.png">
 			<img class="fourth" alt="text" src="image/Rectangle134.png">
 		</div>
+		<p class="room"> Квартира-студия<br>30 кв.м.</p>
+		<p class="whatroom">В квартире были светлые стены и тёплые цвета. Мы сконцентрировались
+на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
+			<p class="look">Смотреть еще →</p>
 	</div>
+
+	<div class="team_page" id="team_page">
+		<h2>Команда</h2>
+		<div class="girls" >
+			<img class="foto-1" src="image/girl1.png" alt="text">
+			<img class="foto-2" src="image/girl2.png" alt="text">
+			<img class="foto-3" src="image/girl3.png" alt="text">
+		</div>
+		<div class="text_girl">
+		<p class="girl-1 texxt">Это Маша, наш главный дизайнер. Она отвечает за дизайн-проект, приезжает к вам домой, общается
+и помогает сделать вашу квартиру красивой и уютной.</p>
+		<p class="girl-2 texxt">С нашим менеджером Сашей вы познакомитесь в первую очередь. Она проконсультирует вас, соберёт все документы
+и ответит на все вопросы.</p>
+		<p class="girl-3 texxt">Катя тоже занимается дизайном.
+Она всегда находит общий язык с клиентами и точно знает,
+как обсутроить дом так, чтобы вам понравилось.</p>
+		</div>
+	</div>
+
+	<div id="work_page" class="work_page">
+		<h2>Как мы работаем</h2>
+		<div class="blockk">
+		<div class="block-1 ">
+			<div id="ellips" class="ellips-1"></div>
+			<p class="num one">1</p>
+			<p class="1 text">Знакомимся, выезжаем на объект, утверждаем концепцию, подписывем договор.</p>
+		</div>
+		<div class="block-2">
+			<div id="ellips" class="ellips-2"></div>
+			<p class="num two">2</p>
+			<p class="3 text">Подбираем мебель, текстиль, аксессуры. Делаем 3D-зуализацию.</p>
+		</div>
+		<div class="block-3">
+			<div id="ellips" class="ellips-3"></div>
+			<p class="num tree">3</p>
+			<p class="2 text">Находим нужные магазины, помогаем с доставкой и оплатой товаров.</p>
+		</div>
+		<div class="block-4">
+			<div id="ellips" class="ellips-4"></div>
+			<p class="num four">4</p>
+			<p class="4 text">Воплощаем проект в жизнь: расставляем мебель и цветы, вешаем шторы, находим места для мелочей</p>
+		</div>
+	</div>
+</div>
 
 
 </body>
