--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="slide_title">
 				<h1>Поможем сделать вашу квартиру уютнее</h1>
 				<p class="subtitle">Подбираем текстиль, мебель и аксессуары под ваш интерьер, находим магазины и помогаем организовать доставку</p>
-				<a><button class="application" type="submit">Оставить заявку</button></a>
+				<button class="application" type="submit"><a href="#app_page">Оставить заявку</a></button>
 		</div>
 	</div>
 
@@ -66,5 +66,95 @@
 		  <p class="look">Смотреть еще →</p>
 	</div>
 
+	<div class="team_page" id="team_page">
+	  <h2>Команда</h2>
+	  <div class="girls" >
+	    <img class="foto-1" src="image/girl1.png" alt="text">
+	    <img class="foto-2" src="image/girl2.png" alt="text">
+	    <img class="foto-3" src="image/girl3.png" alt="text">
+	  </div>
+	  <div class="text_girl">
+	  <p class="girl-1 texxt">Это Маша, наш главный дизайнер. Она отвечает за дизайн-проект, приезжает к вам домой, общается
+	и помогает сделать вашу квартиру красивой и уютной.</p>
+	  <p class="girl-2 texxt">С нашим менеджером Сашей вы познакомитесь в первую очередь. Она проконсультирует вас, соберёт все документы
+	и ответит на все вопросы.</p>
+	  <p class="girl-3 texxt">Катя тоже занимается дизайном.
+	Она всегда находит общий язык с клиентами и точно знает,
+	как обсутроить дом так, чтобы вам понравилось.</p>
+	  </div>
+
+
+	<div id="work_page" class="work_page">
+	  <h2>Как мы работаем</h2>
+	  <div class="blockk">
+	  <div class="block-1 ">
+	    <div id="ellips" class="ellips-1 ellips"></div>
+	    <p class="num one">1</p>
+	    <p class="1 text">Знакомимся, выезжаем на объект, утверждаем концепцию, подписывем договор.</p>
+	  </div>
+	  <div class="block-2">
+	    <div id="ellips" class="ellips-2 ellips"></div>
+	    <p class="num two">2</p>
+	    <p class="3 text">Подбираем мебель, текстиль, аксессуры. Делаем 3D-зуализацию.</p>
+	  </div>
+	  <div class="block-3">
+	    <div id="ellips" class="ellips-3 ellips"></div>
+	    <p class="num tree">3</p>
+	    <p class="2 text">Находим нужные магазины, помогаем с доставкой и оплатой товаров.</p>
+	  </div>
+	  <div class="block-4">
+	    <div id="ellips" class="ellips-4 ellips"></div>
+	    <p class="num four">4</p>
+	    <p class="4 text">Воплощаем проект в жизнь: расставляем мебель и цветы, вешаем шторы, находим места для мелочей</p>
+	  </div>
+	</div>
+	</div>
+</div>
+
+<div class="clients_page" id="clients_page">
+	<h2>Отзывы</h2>
+		<div class="Otz">
+			<p class="ClinPage"><br> <br><br> <br>«Восторг! Спасибо, за комфортную жизнь. Очень рада, что выбрала вашу студию для украшения своего дома.
+							<br> <br>Работа шла быстро, было очень приятно общаться и взаимодествовайть
+							с сотрудниками. Не ожидала, что это будет так легко!
+							<br> <br>Буду советовать и своим друзьям к вам обращаться!»
+						<br> <br>АННА БЕЛОВСКАЯ</p>
+			<div class="pic">
+				<img src="image/pic1.png" alt="text">
+				<img src="image/pic2.png" alt="text">
+			</div>
+		</div>
+		<div class="elipp">
+			<div id="ellips" class="elip-1 elip">
+				<p class="strelka"> ← </p> </div>
+			<div id="ellips" class="elip-2 elip">
+				<p class="strelka"> → </p> </div>
+		</div>
+	</div>
+
+	<div class="app_page" id="app_page">
+		<div>
+		<h2>Оставить заявку</h2>
+		<p class="tit">Оставьте свои контакты. Менеджер перезвонит в удобное вам время и ответит на все вопросы.<p>
+
+	<form>
+		<label>
+			<input class="name" type="text" placeholder="Ваше имя" size="30">
+		</label>
+		<label>
+			<input class="name" type="text" placeholder="Ваш телефон" size="30">
+		</label>
+	</form>
+	<p class="end"><button class="sub" type="submit">Оставить заявку</button></p>
+	</div>
+	<div>
+		<img src="image/cards.png" alt="text">
+	</div>
+	</div>
+	<footer>
+		<p>+7 (981) 857-46-24</p>
+		<p>г. Санкт-петербург, ул. Большая Конюшенная, 19</p>
+		<p>ИП Королёва А.А.</p>
+	</footer>
 </body>
 </html>
