--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<div class="portfolio_page" id="portfolio_page">
 	  <h2>Наши работы</h2>
 		<div class="picture">
-	    <img class="first" alt="text" src="image/Rectangle145.png">
+	    <img class="first" alt="text" src="image/image55.png">
 			<img class="second" alt="text" src="image/Rectangle132.png">
 	    <img class="fourth" alt="text" src="image/Rectangle134.png">
 			<img class="third" alt="text" src="image/image56.png">
@@ -124,6 +124,7 @@
 				<img src="image/pic2.png" alt="text">
 			</div>
 		</div>
+
 		<div class="elipp">
 			<div id="ellips" class="elip-1 elip">
 				<p class="strelka"> ← </p> </div>
@@ -134,8 +135,8 @@
 
 	<div class="app_page" id="app_page">
 		<div>
-		<h2>Оставить заявку</h2>
-		<p class="tit">Оставьте свои контакты. Менеджер перезвонит в удобное вам время и ответит на все вопросы.<p>
+			<h2>Оставить заявку</h2>
+			<p class="tit">Оставьте свои контакты. Менеджер перезвонит в удобное вам время и ответит на все вопросы.<p>
 
 	<form>
 		<label>
@@ -145,6 +146,7 @@
 			<input class="name" type="text" placeholder="Ваш телефон" size="30">
 		</label>
 	</form>
+	
 	<p class="end"><button class="sub" type="submit">Оставить заявку</button></p>
 	</div>
 	<div>
