--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
 	<div class="portfolio_page" id="portfolio_page">
 	  <h2>Наши работы</h2>
 		<div class="picture">
-	    <img class="first" alt="text" src="image/image55.png">
-			<img class="second" alt="text" src="image/Rectangle132.png">
-	    <img class="fourth" alt="text" src="image/Rectangle134.png">
-			<img class="third" alt="text" src="image/image56.png">
+
+		    <div class="picture-item"><img src="image/image55.png" alt=""></div>
+		    <div class="picture-item"><img src="image/Rectangle132.png" alt=""></div>
+		    <div class="picture-item"><img src="image/Rectangle134.png" alt=""></div>
+		    <div class="picture-item"><img src="image/image56.png" alt=""></div>
+
 	  </div>
 		<div class="studia">
 			<p class="room"> Квартира-студия<br>30 кв.м.</p>
@@ -146,7 +148,7 @@
 			<input class="name" type="text" placeholder="Ваш телефон" size="30">
 		</label>
 	</form>
-	
+
 	<p class="end"><button class="sub" type="submit">Оставить заявку</button></p>
 	</div>
 	<div>
